--- a/sharinpix/src/classes/Client.cls
+++ b/sharinpix/src/classes/Client.cls
@@ -1,6 +1,10 @@
 global with sharing class Client {
   private static Client instance = null;
 
+  global String client_id { get; set; }
+  global String client_secret { get; set; }
+  global String endpoint_url { get; set; }
+
   global static Client getInstance() {
     if (Test.isRunningTest()) {
       return instance = new Client('sharinpix://test:test@api.sharinpix.com/api/v1');
@@ -15,10 +19,6 @@ global with sharing class Client {
     }
     return instance;
   }
-
-  global String client_id {get;set;}
-  global String client_secret {get;set;}
-  global String endpoint_url {get;set;}
 
   global Client(String client_id, String client_secret, String endpoint_url){
     this.client_id = client_id;
@@ -68,7 +68,7 @@ global with sharing class Client {
     return newAlbumId == (String)album.get('public_id');
   }
 
-  global Object post(String endpoint, Blob body, Map<String, Object> claims){
+  global Object post(String endpoint, Blob body, Map<String, Object> claims) {
     HttpRequest req = new HttpRequest();
     req.setEndpoint(this.endpoint_url + endpoint);
     req.setMethod('POST');
@@ -80,12 +80,12 @@ global with sharing class Client {
     if (response.getStatus() == 'OK') {
       return JSON.deserializeUntyped(response.getBody());
     } else {
-      throw new SharinPixException('API response ' + response.getStatus() + ': '+ response.getBody());
+      throw new SharinPixException('API response ' + response.getStatus() + ': ' + response.getBody());
     }
     return new Map<String, Object>();
   }
 
-  global Object put(String endpoint, Blob body, Map<String, Object> claims){
+  global Object put(String endpoint, Blob body, Map<String, Object> claims) {
     HttpRequest req = new HttpRequest();
     req.setEndpoint(this.endpoint_url + endpoint);
     req.setMethod('PUT');
@@ -94,15 +94,15 @@ global with sharing class Client {
     req.setBodyAsBlob(body);
     Http http = new Http();
     HTTPResponse response = http.send(req);
-    if (response.getStatus() == 'OK'){
+    if (response.getStatus() == 'OK') {
       return JSON.deserializeUntyped(response.getBody());
     } else {
-      throw new SharinPixException('API response ' + response.getStatus() + ': '+ response.getBody());
+      throw new SharinPixException('API response ' + response.getStatus() + ': ' + response.getBody());
     }
     return new Map<String, Object>();
   }
 
-  global Object get(String endpoint, Map<String, Object> claims){
+  global Object get(String endpoint, Map<String, Object> claims) {
     HttpRequest req = new HttpRequest();
     req.setEndpoint(this.endpoint_url + endpoint);
     req.setMethod('GET');
@@ -110,14 +110,14 @@ global with sharing class Client {
     req.setHeader('Content-Type', 'application/json');
     Http http = new Http();
     HTTPResponse response = http.send(req);
-    if (response.getStatus() == 'OK'){
+    if (response.getStatus() == 'OK') {
       return JSON.deserializeUntyped(response.getBody());
     } else {
       throw new SharinPixException('API response ' + response.getStatus() + ': ' + response.getBody());
     }
   }
 
-  global boolean destroy(String endpoint, Map<String, Object> claims){
+  global Boolean destroy(String endpoint, Map<String, Object> claims) {
     HttpRequest req = new HttpRequest();
     req.setEndpoint(this.endpoint_url + endpoint);
     req.setMethod('DELETE');
@@ -125,7 +125,7 @@ global with sharing class Client {
     req.setHeader('Content-Type', 'application/json');
     Http http = new Http();
     HTTPResponse response = http.send(req);
-    if (response.getStatusCode() == 204){
+    if (response.getStatusCode() == 204) {
       return true;
     } else {
       throw new SharinPixException('API response ' + response.getStatus() + ': '+ response.getBody());
@@ -133,21 +133,19 @@ global with sharing class Client {
     return false;
   }
 
-  global Object upload_attachment(id attachmentId, string albumId, Map<String, Object> metadatas){
-    if (!(Schema.sObjectType.Attachment.isAccessible() &&
-        Schema.sObjectType.Attachment.fields.Id.isAccessible() &&
-        Schema.sObjectType.Attachment.fields.Name.isAccessible() &&
-        Schema.sObjectType.Attachment.fields.Body.isAccessible()))
-    {
+  global Object upload_attachment(id attachmentId, string albumId, Map<String, Object> metadatas) {
+    if (!(Schema.sObjectType.Attachment.isAccessible()
+          && Schema.sObjectType.Attachment.fields.Id.isAccessible()
+          && Schema.sObjectType.Attachment.fields.Name.isAccessible()
+          && Schema.sObjectType.Attachment.fields.Body.isAccessible())) {
       throw new SharinPixException('Insufficient privilege');
       return null;
     }
-    Attachment attachment = [SELECT Id, name FROM Attachment WHERE Id=:attachmentId LIMIT 1];
+    Attachment attachment = [SELECT Id, Name FROM Attachment WHERE Id=:attachmentId LIMIT 1];
 
-    Boolean b_true = true;
     Map<String, Object> album_access = new Map<String, Object>();
-    album_access.put('see', b_true);
-    album_access.put('image_upload', b_true);
+    album_access.put('see', true);
+    album_access.put('image_upload', true);
     Map<String, Object> album_ability = new Map<String, Object>();
     album_ability.put('Access', album_access);
     Map<String, Object> abilities = new Map<String, Object>();
@@ -168,16 +166,72 @@ global with sharing class Client {
     return this.post('/imports/', Blob.valueOf(JSON.serialize(import_payload)), claims);
   }
 
-  global Object upload_attachment(id attachmentId, string albumId){
+  global Object upload_attachment(Id attachmentId, String albumId) {
     Map<String, Object> metadatas = new Map<String, Object>();
     return upload_attachment(attachmentId, albumId, metadatas);
   }
 
-  global boolean clear_tag_image(String albumId, String imageId, String[] Tags){
+  global List<String> getTagsOnImage(String albumId, String imageId, List<String> tags) {
+    Map<String, Object> paramTags = new Map<String, Object>();
+    for (String tag : tags) {
+      paramTags.put(tag, '');
+    }
+    Map<String, Object> params = new Map<String, Object> {
+        'abilities' => new Map<String, Object> {
+            albumId => new Map<String, Object> {
+                'Access' => new Map<String, Object> {
+                    'see' => true,
+                    'image_tag' => true
+                },
+                'Tags' => paramTags
+            }
+        }
+    };
+    Integer page = 1;
+    List<Object> tagImagesPage = new List<Object>();
+    List<Object> allTagImages = new List<Object>();
+    do {
+      tagImagesPage = (List<Object>)this.get('/tag_images?album_id=' + albumId + '&image_id=' + imageId + '&page=' + page++, params);
+      allTagImages.addAll(tagImagesPage);
+    } while (tagImagesPage.size() == 25);
+    List<String> tagsOnImage = new List<String>();
+    for (Object tagImage : allTagImages) {
+        tagsOnImage.add((String)((Map<String, Object>)((Map<String, Object>)tagImage).get('tag')).get('name'));
+    }
+    return tagsOnImage;
+  }
+
+  global Boolean removeTag(String albumId, String imageId, String[] tags) {
+    try {
+      Map<String, Object> paramTags = new Map<String, Object>();
+      for (String tag : tags) {
+        paramTags.put(tag, '');
+      }
+      Map<String, Object> claims = new Map<String, Object> {
+        'abilities' => new Map<String, Object> {
+          albumId => new Map<String, Object> {
+            'Access' => new Map<String, Object> {
+              'see' => true
+            },
+            'Tags' => paramTags
+          }
+        }
+      };
+      List<Object> tagImages = (List<Object>)this.get('/tag_images?image_id=' + imageId, claims);
+      for (Object tagImage : tagImages) {
+        this.destroy('/tag_images/' + (String)((Map<String, Object>)tagImage).get('id'), claims);
+      }
+      return true;
+    } catch (Exception e) {
+      throw new SharinPixException(e.getCause() + '[' + e.getLineNumber() + ']: ' + e.getMessage());
+    }
+  }
+
+  global Boolean clear_tag_image(String albumId, String imageId, String[] tags) {
     Map<String, Object> album_access = new Map<String, Object>();
     album_access.put('see', true);
     Map<String, String> album_tags = new Map<String, String>();
-    for(String tag : Tags){
+    for (String tag : tags) {
       album_tags.put(tag, '');
     }
     Map<String, Object> album_ability = new Map<String, Object>();
@@ -188,15 +242,31 @@ global with sharing class Client {
     Map<String, Object> claims = new Map<String, Object>();
     claims.put('abilities', abilities);
     List<Object> tag_images = (List<Object>)this.get('/tag_images?image_id='+imageId, claims);
-    for(Object tag_image_object : tag_images){
+    for (Object tag_image_object : tag_images) {
       Map<String, Object> tag_image = (Map<String, Object>)tag_image_object;
       String id = (String)tag_image.get('id');
-      this.destroy('/tag_images/'+id, claims);
+      this.destroy('/tag_images/' + Id, claims);
     }
     return true;
   }
 
-  global Object add_tag_image(String albumId, String imageId, String tagName){
+  global Object addTag(String albumId, String imageId, String tagName) {
+    Map<String, Object> claims = new Map<String, Object> {
+      'abilities' => new Map<String, Object> {
+        albumId => new Map<String, Object> {
+          'Access' => new Map<String, Object> {
+            'see' => true
+          },
+          'Tags' => new Map<String, Object> {
+            tagName => ''
+          }
+        }
+      }
+    };
+    return this.post('/tags/' + EncodingUtil.urlEncode(tagName, 'UTF-8').replaceAll('\\+', '%20') + '/tag_images', Blob.valueOf('{"image_ids":["' + imageId + '"]}'), claims);
+  }
+
+  global Object add_tag_image(String albumId, String imageId, String tagName) {
     Map<String, Object> album_access = new Map<String, Object>();
     album_access.put('see', true);
     Map<String, String> album_tags = new Map<String, String>();
@@ -208,23 +278,23 @@ global with sharing class Client {
     abilities.put(albumId, album_ability);
     Map<String, Object> claims = new Map<String, Object>();
     claims.put('abilities', abilities);
-    return this.post('/tags/'+tagName+'/tag_images', Blob.valueof('{"image_ids": ["'+ImageId+'"]}'), claims);
+    return this.post('/tags/' + tagName + '/tag_images', Blob.valueOf('{"image_ids": ["' + imageId + '"]}'), claims);
   }
 
-  global string token(Map<String, Object> claims){
+  global String token(Map<String, Object> claims) {
     return new Token(this.client_id, this.client_secret, claims).issue();
   }
 
-  global boolean test_api(){
+  global Boolean test_api() {
     try {
-      Map<String, Object> response = (Map<String, Object>)this.get('/organization', new map<String, object>());
-      if(response.containsKey('id')){
+      Map<String, Object> response = (Map<String, Object>)this.get('/organization', new Map<String, Object>());
+      if (response.containsKey('id')) {
         return true;
       } else {
         return false;
       }
     }
-    catch(Exception e){
+    catch (Exception e) {
       return false;
     }
   }
